fix MB text z-index
- the “MB” label on memory quota fields sat above the footer in z-index; unnecessarily.

Reviewed-on: http://review.couchbase.org/107967
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>

--- a/priv/public/ui/app/css/cbui-base.css
+++ b/priv/public/ui/app/css/cbui-base.css
@@ -783,7 +783,7 @@ input[type="checkbox"] {
   position: absolute;
   right: .5rem;
   top: 7px;
-  z-index: 10;
+  z-index: 1;
   font-size: .75rem;
   color: #999;
 }
